--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="dist/mina-core-2.0.15.jar">
 		<attributes>
-			<attribute name="javadoc_location" value="file:/I:/companywork/eclipse_work/TestS/docs/apidocs/"/>
+			<attribute name="javadoc_location" value="file:/G:/server/mina/docs/apidocs/"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="dist/mina-filter-compression-2.0.15.jar"/>
@@ -26,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/xbean-spring-4.5.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.21.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
