--- a/config/trans_server.properties
+++ b/config/trans_server.properties
@@ -1,6 +1,7 @@
 ip=127.0.0.1
 client_port=34567
-server_port=34568
+logic_server_port=34568
+trans_server_port=34569
 max_route=1024
 route_url=http://127.0.0.1/route/adress
 connect_timeout=30;
