--- a/.classpath
+++ b/.classpath
@@ -1,30 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="dist/mina-core-2.0.15.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="file:/G:/server/mina/docs/apidocs/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="dist/mina-filter-compression-2.0.15.jar"/>
-	<classpathentry kind="lib" path="dist/mina-http-2.0.15.jar"/>
-	<classpathentry kind="lib" path="dist/mina-integration-beans-2.0.15.jar"/>
-	<classpathentry kind="lib" path="dist/mina-integration-jmx-2.0.15.jar"/>
-	<classpathentry kind="lib" path="dist/mina-integration-ognl-2.0.15.jar"/>
-	<classpathentry kind="lib" path="dist/mina-integration-xbean-2.0.15.jar"/>
-	<classpathentry kind="lib" path="dist/mina-statemachine-2.0.15.jar"/>
-	<classpathentry kind="lib" path="dist/mina-transport-apr-2.0.15.jar"/>
-	<classpathentry kind="lib" path="lib/commons-logging-1.0.3.jar"/>
-	<classpathentry kind="lib" path="lib/javassist-3.20.0-GA.jar"/>
-	<classpathentry kind="lib" path="lib/jcl-over-slf4j-1.7.21.jar"/>
-	<classpathentry kind="lib" path="lib/jzlib-1.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/ognl-3.1.10.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-api-1.7.21.jar"/>
-	<classpathentry kind="lib" path="lib/spring-2.5.6.SEC03.jar"/>
-	<classpathentry kind="lib" path="lib/tomcat-jni-9.0.0.M9.jar"/>
-	<classpathentry kind="lib" path="lib/xbean-spring-4.5.jar"/>
-	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="lib/slf4j-log4j12-1.7.21.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-core-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-filter-compression-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-http-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-integration-beans-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-integration-jmx-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-integration-ognl-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-integration-xbean-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-statemachine-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/dist/mina-transport-apr-2.0.15.jar"/>
+	<classpathentry kind="lib" path="lib/mina/commons-logging-1.0.3.jar"/>
+	<classpathentry kind="lib" path="lib/mina/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/mina/jcl-over-slf4j-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/mina/jzlib-1.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/mina/ognl-3.1.10.jar"/>
+	<classpathentry kind="lib" path="lib/mina/spring-2.5.6.SEC03.jar"/>
+	<classpathentry kind="lib" path="lib/mina/tomcat-jni-9.0.0.M9.jar"/>
+	<classpathentry kind="lib" path="lib/mina/xbean-spring-4.5.jar"/>
+	<classpathentry kind="lib" path="lib/log/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="lib/log/slf4j-api-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/log/slf4j-log4j12-1.7.21.jar"/>
+	<classpathentry kind="lib" path="lib/db/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="lib/db/classmate-1.3.0.jar"/>
+	<classpathentry kind="lib" path="lib/db/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/db/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="lib/db/ehcache-2.10.1.jar"/>
+	<classpathentry kind="lib" path="lib/db/geronimo-jta_1.1_spec-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/db/hibernate-commons-annotations-5.0.1.Final.jar"/>
+	<classpathentry kind="lib" path="lib/db/hibernate-core-5.1.4.Final.jar"/>
+	<classpathentry kind="lib" path="lib/db/hibernate-ehcache-5.1.4.Final.jar"/>
+	<classpathentry kind="lib" path="lib/db/hibernate-jpa-2.1-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/db/jandex-2.0.3.Final.jar"/>
+	<classpathentry kind="lib" path="lib/db/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="lib/db/jboss-logging-3.3.0.Final.jar"/>
+	<classpathentry kind="lib" path="lib/db/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="lib/db/slf4j-simple-1.7.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
